--- a/resonite_communities/clients/web/templates/admin/configuration.html
+++ b/resonite_communities/clients/web/templates/admin/configuration.html
@@ -24,7 +24,6 @@
     <div class="container">
 
         <form id="adminConfigForm" action="/admin/update/configuration" method="post">
-            <span class="is-size-4 has-text-danger">Application must be restarted if values are changed!</span>
 
             {% if app_config %}
             <div class="box">
@@ -45,7 +44,7 @@
                                     </button>
                                 </div>
                             </div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
@@ -63,18 +62,22 @@
                                     </button>
                                 </div>
                             </div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Refresh Interval</label></div>
-                        <div class="field-body"><div class="control "><input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config[0].refresh_interval }}"></div></div>
+                        <div class="field-info field-body">
+                            <div class="control">
+                                <input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config[0].refresh_interval }}"></div>
+                                <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
+                            </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Resonite User</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="app_config_cloudvar_resonite_user" name="app_config_cloudvar_resonite_user" value="{{ app_config[0].cloudvar_resonite_user }}"></div>
-                            <!-- <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span> -->
+                            <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
@@ -92,21 +95,21 @@
                                     </button>
                                 </div>
                             </div>
-                            <!-- <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span> -->
+                            <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Base Name</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="app_config_cloudvar_base_name" name="app_config_cloudvar_base_name" value="{{ app_config[0].cloudvar_base_name }}"></div>
-                            <!-- <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span> -->
+                            <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar General Name</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="app_config_cloudvar_general_name" name="app_config_cloudvar_general_name" value="{{ app_config[0].cloudvar_general_name }}"></div>
-                            <!-- <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span> -->
+                            <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
@@ -148,7 +151,7 @@
                         <div class="field-label is-normal"><label class="label">Client ID</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="twitch_config_client_id" name="twitch_config_client_id" value="{{ twitch_config[0].client_id }}"></div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
@@ -166,21 +169,21 @@
                                     </button>
                                 </div>
                             </div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Game ID</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="twitch_config_game_id" name="twitch_config_game_id" value="{{ twitch_config[0].game_id }}"></div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Account Name</label></div>
                         <div class="field-info field-body">
                             <div class="control"><input class="input" type="text" id="twitch_config_account_name" name="twitch_config_account_name" value="{{ twitch_config[0].account_name }}"></div>
-                            <!-- <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span> -->
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                 </div>
