--- a/resonite_communities/clients/web/templates/admin/configuration.html
+++ b/resonite_communities/clients/web/templates/admin/configuration.html
@@ -33,20 +33,21 @@
                         <div class="field-label is-normal"><label class="label">Refresh Interval</label></div>
                         <div class="field-info field-body">
                             <div class="control">
-                                <input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config[0].refresh_interval }}"></div>
-                                <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
+                                <input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config.REFRESH_INTERVAL }}">
+                            </div>
+                            <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                             </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Facet URL</label></div>
-                        <div class="field-body"><div class="control"><input class="input" type="text" id="app_config_facet_url" name="app_config_facet_url" value="{{ app_config[0].facet_url }}"></div></div>
+                        <div class="field-body"><div class="control"><input class="input" type="text" id="app_config_facet_url" name="app_config_facet_url" value="{{ app_config.FACET_URL or '' }}"></div></div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">User Auth</label></div>
                         <div class="field-info field-body">
                             <div class="control">
                                 <div class="buttons has-addons">
-                                    <div x-data="{ app_config_normal_user_login: '{{ 'ENABLED' if app_config[0].normal_user_login else 'DISABLED' }}' }">
+                                    <div x-data="{ app_config_normal_user_login: '{{ 'ENABLED' if app_config.normal_user_login else 'DISABLED' }}' }">
                                         <label class="button" :class="{ 'is-primary': app_config_normal_user_login === 'ENABLED' }">
                                             <input type="radio" name="app_config_normal_user_login" value="ENABLED" class="is-hidden" x-model="app_config_normal_user_login">
                                                 ENABLED
@@ -59,9 +60,36 @@
                                 </div>
                                 <span class="is-size-7 has-text-warning">This only disable NON moderator and NON administrator users to login!</span>
                             </div>
+                        </div>
                     </div>
-            </div>
-
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal"><label class="label">Hero color</label></div>
+                        <div class="field-body"><div class="control"><input class="input" type="text" id="app_config_hero_color" name="app_config_hero_color" value="{{ app_config.HERO_COLOR or '' }}"></div></div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal"><label class="label">Title text</label></div>
+                        <div class="field-info field-body">
+                            <div class="control">
+                                <input class="input" type="text" id="app_config_title_text" name="app_config_title_text" value="{{ app_config.TITLE_TEXT or '' }}">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal"><label class="label">Info text</label></div>
+                        <div class="field-info field-body">
+                            <div class="control">
+                                <input class="input" type="text" id="app_config_info_text" name="app_config_info_text" value="{{ app_config.INFO_TEXT or '' }}">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="field is-horizontal">
+                        <div class="field-label is-normal"><label class="label">Footer text</label></div>
+                        <div class="field-info field-body">
+                            <div class="control">
+                                <input class="input" type="text" id="app_config_footer_text" name="app_config_footer_text" value="{{ app_config.FOOTER_TEXT or ''}}">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -75,7 +103,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['discord_bot_token'] ? 'text' : 'password'" id="app_config_discord_bot_token" name="app_config_discord_bot_token" value="{{ app_config[0].discord_bot_token }}">
+                                    <input class="input" :type="showPassword['discord_bot_token'] ? 'text' : 'password'" id="app_config_discord_bot_token" name="app_config_discord_bot_token" value="{{ app_config.DISCORD_BOT_TOKEN }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['discord_bot_token'] = !showPassword['discord_bot_token']">
@@ -93,7 +121,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['ad_discord_bot_token'] ? 'text' : 'password'" id="app_config_ad_discord_bot_token" name="app_config_ad_discord_bot_token" value="{{ app_config[0].ad_discord_bot_token }}">
+                                    <input class="input" :type="showPassword['ad_discord_bot_token'] ? 'text' : 'password'" id="app_config_ad_discord_bot_token" name="app_config_ad_discord_bot_token" value="{{ app_config.AD_DISCORD_BOT_TOKEN }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['ad_discord_bot_token'] = !showPassword['ad_discord_bot_token']">
@@ -113,7 +141,7 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Resonite User</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_resonite_user" name="app_config_cloudvar_resonite_user" value="{{ app_config[0].cloudvar_resonite_user }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_resonite_user" name="app_config_cloudvar_resonite_user" value="{{ app_config.CLOUDVAR_RESONITE_USER }}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
@@ -124,7 +152,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['cloudvar_pass'] ? 'text' : 'password'" id="app_config_cloudvar_resonite_pass" name="app_config_cloudvar_resonite_pass" value="{{ app_config[0].cloudvar_resonite_pass }}">
+                                    <input class="input" :type="showPassword['cloudvar_pass'] ? 'text' : 'password'" id="app_config_cloudvar_resonite_pass" name="app_config_cloudvar_resonite_pass" value="{{ app_config.CLOUDVAR_RESONITE_PASS }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['cloudvar_pass'] = !showPassword['cloudvar_pass']">
@@ -138,14 +166,14 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Base Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_base_name" name="app_config_cloudvar_base_name" value="{{ app_config[0].cloudvar_base_name }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_base_name" name="app_config_cloudvar_base_name" value="{{ app_config.CLOUDVAR_BASE_NAME }}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar General Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_general_name" name="app_config_cloudvar_general_name" value="{{ app_config[0].cloudvar_general_name }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_general_name" name="app_config_cloudvar_general_name" value="{{ app_config.CLOUDVAR_GENERAL_NAME }}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
