--- a/resonite_communities/clients/web/templates/admin/configuration.html
+++ b/resonite_communities/clients/web/templates/admin/configuration.html
@@ -33,7 +33,7 @@
                         <div class="field-label is-normal"><label class="label">Refresh Interval</label></div>
                         <div class="field-info field-body">
                             <div class="control">
-                                <input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config.REFRESH_INTERVAL }}">
+                                <input class="input" type="text" id="app_config_refresh_interval" name="app_config_refresh_interval" value="{{ app_config.REFRESH_INTERVAL or '' }}">
                             </div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                             </div>
@@ -47,7 +47,7 @@
                         <div class="field-info field-body">
                             <div class="control">
                                 <div class="buttons has-addons">
-                                    <div x-data="{ app_config_normal_user_login: '{{ 'ENABLED' if app_config.normal_user_login else 'DISABLED' }}' }">
+                                    <div x-data="{ app_config_normal_user_login: '{{ 'ENABLED' if app_config.NORMAL_USER_LOGIN else 'DISABLED' }}' }">
                                         <label class="button" :class="{ 'is-primary': app_config_normal_user_login === 'ENABLED' }">
                                             <input type="radio" name="app_config_normal_user_login" value="ENABLED" class="is-hidden" x-model="app_config_normal_user_login">
                                                 ENABLED
@@ -103,7 +103,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['discord_bot_token'] ? 'text' : 'password'" id="app_config_discord_bot_token" name="app_config_discord_bot_token" value="{{ app_config.DISCORD_BOT_TOKEN }}">
+                                    <input class="input" :type="showPassword['discord_bot_token'] ? 'text' : 'password'" id="app_config_discord_bot_token" name="app_config_discord_bot_token" value="{{ app_config.DISCORD_BOT_TOKEN or '' }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['discord_bot_token'] = !showPassword['discord_bot_token']">
@@ -121,7 +121,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['ad_discord_bot_token'] ? 'text' : 'password'" id="app_config_ad_discord_bot_token" name="app_config_ad_discord_bot_token" value="{{ app_config.AD_DISCORD_BOT_TOKEN }}">
+                                    <input class="input" :type="showPassword['ad_discord_bot_token'] ? 'text' : 'password'" id="app_config_ad_discord_bot_token" name="app_config_ad_discord_bot_token" value="{{ app_config.AD_DISCORD_BOT_TOKEN or '' }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['ad_discord_bot_token'] = !showPassword['ad_discord_bot_token']">
@@ -141,7 +141,7 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Resonite User</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_resonite_user" name="app_config_cloudvar_resonite_user" value="{{ app_config.CLOUDVAR_RESONITE_USER }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_resonite_user" name="app_config_cloudvar_resonite_user" value="{{ app_config.CLOUDVAR_RESONITE_USER or '' }}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['cloudvar_pass'] ? 'text' : 'password'" id="app_config_cloudvar_resonite_pass" name="app_config_cloudvar_resonite_pass" value="{{ app_config.CLOUDVAR_RESONITE_PASS }}">
+                                    <input class="input" :type="showPassword['cloudvar_pass'] ? 'text' : 'password'" id="app_config_cloudvar_resonite_pass" name="app_config_cloudvar_resonite_pass" value="{{ app_config.CLOUDVAR_RESONITE_PASS or '' }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['cloudvar_pass'] = !showPassword['cloudvar_pass']">
@@ -166,14 +166,14 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar Base Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_base_name" name="app_config_cloudvar_base_name" value="{{ app_config.CLOUDVAR_BASE_NAME }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_base_name" name="app_config_cloudvar_base_name" value="{{ app_config.CLOUDVAR_BASE_NAME or '' }}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Cloudvar General Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_general_name" name="app_config_cloudvar_general_name" value="{{ app_config.CLOUDVAR_GENERAL_NAME }}"></div>
+                            <div class="control"><input class="input" type="text" id="app_config_cloudvar_general_name" name="app_config_cloudvar_general_name" value="{{ app_config.CLOUDVAR_GENERAL_NAME or ''}}"></div>
                             <span class="is-size-7 has-text-warning">Value not in use, please ignore!</span>
                         </div>
                     </div>
