--- a/resonite_communities/clients/web/templates/admin/configuration.html
+++ b/resonite_communities/clients/web/templates/admin/configuration.html
@@ -182,14 +182,13 @@
             {% endif %}
 
 
-            {% if twitch_config %}
             <div class="box">
                 <h2 class="title is-4">Twitch Configuration</h2>
                 <div x-data="{ showPassword: {} }">
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Client ID</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_client_id" name="twitch_config_client_id" value="{{ twitch_config[0].client_id }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_client_id" name="twitch_config_client_id" value="{{ twitch_config[0].client_id if twitch_config and twitch_config[0].client_id else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
@@ -200,7 +199,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['twitch_secret'] ? 'text' : 'password'" id="twitch_config_secret" name="twitch_config_secret" value="{{ twitch_config[0].secret }}">
+                                    <input class="input" :type="showPassword['twitch_secret'] ? 'text' : 'password'" id="twitch_config_secret" name="twitch_config_secret" value="{{ twitch_config[0].secret if twitch_config and twitch_config[0].secret else '' }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['twitch_secret'] = !showPassword['twitch_secret']">
@@ -214,20 +213,19 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Game ID</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_game_id" name="twitch_config_game_id" value="{{ twitch_config[0].game_id }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_game_id" name="twitch_config_game_id" value="{{ twitch_config[0].game_id if twitch_config and twitch_config[0].game_id else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Account Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_account_name" name="twitch_config_account_name" value="{{ twitch_config[0].account_name }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_account_name" name="twitch_config_account_name" value="{{ twitch_config[0].client_id if twitch_config and twitch_config[0].account_name else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                 </div>
             </div>
-            {% endif %}
 
             <div class="box" x-data="adminConfiguration" data-monitored-config='{{ monitored_config | tojson | safe }}'>
                 <h2 class="title is-4">Monitored Domains</h2>
