--- a/resonite_communities/clients/web/templates/admin/configuration.html
+++ b/resonite_communities/clients/web/templates/admin/configuration.html
@@ -188,7 +188,7 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Client ID</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_client_id" name="twitch_config_client_id" value="{{ twitch_config[0].client_id if twitch_config and twitch_config[0].client_id else '' }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_client_id" name="twitch_config_client_id" value="{{ app_config.Twitch.client_id if app_config.Twitch and app_config.Twitch.client_id else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
@@ -199,7 +199,7 @@
                         <div class="field-info field-body">
                             <div class="field has-addons">
                                 <div class="control is-expanded">
-                                    <input class="input" :type="showPassword['twitch_secret'] ? 'text' : 'password'" id="twitch_config_secret" name="twitch_config_secret" value="{{ twitch_config[0].secret if twitch_config and twitch_config[0].secret else '' }}">
+                                    <input class="input" :type="showPassword['twitch_secret'] ? 'text' : 'password'" id="twitch_config_secret" name="twitch_config_secret" value="{{ app_config.Twitch.secret if app_config.Twitch and app_config.Twitch.secret else '' }}">
                                 </div>
                                 <div class="control">
                                     <button type="button" class="button" @click="showPassword['twitch_secret'] = !showPassword['twitch_secret']">
@@ -213,14 +213,14 @@
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Game ID</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_game_id" name="twitch_config_game_id" value="{{ twitch_config[0].game_id if twitch_config and twitch_config[0].game_id else '' }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_game_id" name="twitch_config_game_id" value="{{ app_config.Twitch.game_id if app_config.Twitch and app_config.Twitch.game_id else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
                     <div class="field is-horizontal">
                         <div class="field-label is-normal"><label class="label">Account Name</label></div>
                         <div class="field-info field-body">
-                            <div class="control"><input class="input" type="text" id="twitch_config_account_name" name="twitch_config_account_name" value="{{ twitch_config[0].client_id if twitch_config and twitch_config[0].account_name else '' }}"></div>
+                            <div class="control"><input class="input" type="text" id="twitch_config_account_name" name="twitch_config_account_name" value="{{ app_config.Twitch.client_id if app_config.Twitch and app_config.Twitch.account_name else '' }}"></div>
                             <span class="is-size-7 has-text-danger">Application must be restarted if this value is changed!</span>
                         </div>
                     </div>
