Separate language tags from normal tags

--- a/resonite_communities/clients/web/templates/index.html
+++ b/resonite_communities/clients/web/templates/index.html
@@ -30,6 +30,10 @@
       .hero.is-link .tabs a:hover {
         opacity: 1;
       }
+
+      .tags {
+        gap: inherit;
+      }
     </style>
 {% endblock %}
 {% block alpine_components_head %}
@@ -99,7 +103,10 @@
               <div class="card my-3">
                 <header class="card-header">
                     <div class="card-header-title is-flex is-flex-direction-column is-align-items-flex-start">
+                        <div class="is-flex is-flex-direction-row is-align-items-center">
                         <p>{{ event.name }}</p>
+                          <div class="tags flags is-flex">{{ event.tags|flags|safe }}</div>
+                        </div>
                         <div class="tags is-flex">{{ event.tags|tags|safe }}</div>
                     </div>
                     <div class="date info is-flex is-flex-direction-row is-justify-content-center is-align-items-center">
