--- a/resonite_communities/clients/web/templates/index.html
+++ b/resonite_communities/clients/web/templates/index.html
@@ -236,14 +236,14 @@
               <div class="card my-3">
                 <header class="card-header">
                     <figure  class="image is-128x128 is-center">
-                      <img src="{{ stream.community.logo }}" alt="Image">
+                      <img src="{{ stream.community_logo }}" alt="Image">
                     </figure >
                     <div class="card-header-title">
                       <p>{{ stream.name }}</p>
                       <br>
-                      <p class="subtitle">Streamed by {{ stream.community.name }}</p>
+                      <p class="subtitle">Streamed by {{ stream.community_name }}</p>
                     </div>
-                    <a class="button is-info" href="https://www.twitch.tv/{{ stream.community.name }}">Visit channel</a>
+                    <a class="button is-info" href="https://www.twitch.tv/{{ stream.community_name }}">Visit channel</a>
                     <div class="date info is-flex is-flex-direction-row is-justify-content-center is-align-items-center">
                         <i class="fas fa-circle-info" title="Dates are in UTC timezone"></i>
                         <div class="date my-3 mx-4 is-flex">
